k8s/handbrake/resources/handbrake.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: jlesage/handbrake:v24.06.1
          name: handbrake
          ports:
            - name: web
              containerPort: 5800
          volumeMounts:
            - name: ripping-storage
              mountPath: /output
            - name: config-volume
              mountPath: /config
      volumes:
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
