k8s/handbrake/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://handbrake.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: handbrake
    gethomepage.dev/group: Media
    gethomepage.dev/icon: handbrake
    gethomepage.dev/name: Handbrake
    gethomepage.dev/weight: '10'
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-web-service.auth.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.durbin.casa/oauth2/start
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Preferred-Username
spec:
  ingressClassName: internal
  rules:
    - host: &host handbrake.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
